// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`registry getConstructorParameterInjections can get all property injections 1`] = `[]`;

exports[`registry getInjections can get all injections registered 1`] = `
[
  {
    "id": {
      "tokenFor": "Symbol(registry.string)",
    },
    "name": "str",
    "options": {
      "metadata": {},
      "multiple": false,
      "optional": false,
    },
    "type": "property",
  },
  {
    "id": {
      "tokenFor": "Symbol(registry.class)",
    },
    "options": {
      "metadata": {},
      "multiple": false,
      "optional": false,
    },
    "type": "request",
  },
]
`;

exports[`registry getPropertyInjections can get all property injections 1`] = `
[
  {
    "id": {
      "tokenFor": "Symbol(registry.string)",
    },
    "name": "str",
    "options": {
      "metadata": {},
      "multiple": false,
      "optional": false,
    },
    "type": "property",
  },
]
`;

exports[`registry registerInjection succeeds for an unseen class 1`] = `
[
  {
    "id": {
      "tokenFor": "Symbol(Unseen)",
    },
    "options": {
      "metadata": {},
      "multiple": false,
      "optional": false,
    },
    "type": "request",
  },
]
`;
